overflow fix

--- a/components/Splash/styles.module.scss
+++ b/components/Splash/styles.module.scss
@@ -6,6 +6,7 @@ $received: #e5e5ea;
 $typing: #e5e5ea;
 
 .outer {
+  overflow-x: hidden;
   padding: 40px 20px;
 }
 
